--- a/agents.ipynb
+++ b/agents.ipynb
@@ -122,7 +122,7 @@
    "source": [
     "from langchain.agents import AgentExecutor\n",
     "\n",
-    "agent_executor = AgentExecutor(agent=agent2, tools=tools, verbose=True)"
+    "agent_executor2 = AgentExecutor(agent=agent2, tools=tools, verbose=True)"
    ]
   },
   {
@@ -161,7 +161,92 @@
     }
    ],
    "source": [
-    "agent_executor.invoke({\"input\": \"What is langchain\"})"
+    "agent_executor2.invoke({\"input\": \"What is langchain\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.prompts import PromptTemplate\n",
+    "\n",
+    "greeting_template = \"\"\"\n",
+    "You are a friendly AI that greets people warmly when they start a conversation and says goodbye appropriately when they mention leaving. \n",
+    "\n",
+    "If someone says something about going away, respond with a proper goodbye.\n",
+    "If they just greet you or talk normally, respond with a friendly greeting.\n",
+    "\n",
+    "User: {user_input}\n",
+    "{agent_scratchpad}\n",
+    "AI: \n",
+    "\"\"\"\n",
+    "\n",
+    "# Initialize the prompt template\n",
+    "greeting_prompt = PromptTemplate(input_variables=[\"user_input\"], template=greeting_template)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set the LANGCHAIN_API_KEY environment variable (create key in settings)\n",
+    "from langchain import hub\n",
+    "prompt_agent21 = hub.pull(\"greeter\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agent21 = create_tool_calling_agent(llm, tools=tools, prompt= greeting_prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agent_executor21 = AgentExecutor(agent=agent21, tools = tools, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3mGoodbye! If you need anything else, feel free to reach out.\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'user_input': 'See ya',\n",
+       " 'output': 'Goodbye! If you need anything else, feel free to reach out.'}"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "agent_executor21.invoke({\"user_input\" : \"See ya\"})"
    ]
   }
  ],
