--- a/create.ipynb
+++ b/create.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -53,6 +53,52 @@
     "            graph.run(child_query)\n",
     "\n",
     "print(\"Data imported successfully.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_connected_nodes(node_name):\n",
+    "    # Define the Cypher query to find connected nodes and return both Name and Desc properties\n",
+    "    query = \"\"\"\n",
+    "    MATCH (n {Name: $node_name})-[:CHILD_OF|PARENT_OF]-(connected_nodes)\n",
+    "    RETURN connected_nodes.Name AS name, connected_nodes.Desc AS desc\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Execute the query\n",
+    "    results = graph.run(query, node_name=node_name)\n",
+    "    \n",
+    "    # Extract the Name and Desc of each connected node\n",
+    "    connected_nodes_info = []\n",
+    "    for record in results:\n",
+    "        name = record[\"name\"]\n",
+    "        desc = record[\"desc\"]\n",
+    "        connected_nodes_info.append({\"Name\": name, \"Desc\": desc})\n",
+    "    \n",
+    "    return connected_nodes_info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.prompts import PromptTemplate\n",
+    "\n",
+    "choosing_template = \"\"\"\n",
+    "You are an agent with multiple other AI agents for your assistance.\n",
+    "Given a list of connected agents with their names and description, if required return the name of the next agent you require for your assistance as well as give an instruction for it.\n",
+    "List of agents : {Connected_agents} \n",
+    "{agent_scratchpad}\n",
+    "AI: \n",
+    "\"\"\"\n",
+    "\n",
+    "# Initialize the prompt template\n",
+    "choosing_prompt = PromptTemplate(input_variables=[\"Connected_agents\"], template=choosing_template)"
    ]
   },
   {
