added next node prompt

--- a/agents.ipynb
+++ b/agents.ipynb
@@ -2,7 +2,57 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from py2neo import Graph\n",
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "\n",
+    "# Load environment variables\n",
+    "load_dotenv()\n",
+    "neo4j_password = os.getenv('NEO4J_PASSWORD')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph = Graph(\"neo4j://localhost:7687\", auth=(\"neo4j\", neo4j_password))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_connected_nodes(node_name):\n",
+    "    # Define the Cypher query to find connected nodes and return both Name and Desc properties\n",
+    "    query = \"\"\"\n",
+    "    MATCH (n {Name: $node_name})-[:PARENT_OF]-(connected_nodes)\n",
+    "    RETURN connected_nodes.Name AS name, connected_nodes.Desc AS desc\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Execute the query\n",
+    "    results = graph.run(query, node_name=node_name)\n",
+    "    \n",
+    "    # Extract the Name and Desc of each connected node\n",
+    "    connected_nodes_info = []\n",
+    "    for record in results:\n",
+    "        name = record[\"name\"]\n",
+    "        desc = record[\"desc\"]\n",
+    "        connected_nodes_info.append({\"Name\": name, \"Desc\": desc})\n",
+    "    \n",
+    "    return connected_nodes_info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +61,7 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -24,7 +74,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_community.tools.tavily_search import TavilySearchResults\n",
+    "from langchain_core.prompts import ChatPromptTemplate\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "search_prompt = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\n",
+    "            \"system\",\n",
+    "            \"\"\"You are a highly skilled assistant designed to search and answer user's general queries\n",
+    "            Given a list of connected agents with their names and description, if required return the name of the next agent you require for your assistance as well as give an instruction for it.\n",
+    "               List of agents : {Connected_agents} \"\"\"\n",
+    "        ),\n",
+    "        (\"placeholder\", \"{chat_history}\"),\n",
+    "        (\"human\", \"{input}\"),\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "greeting_prompt = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\n",
+    "            \"system\",\n",
+    "            \"\"\"You are a friendly AI that greets people warmly when they start a conversation and says goodbye appropriately when they mention leaving. \n",
+    "\n",
+    "                If someone says something about going away, respond with a proper goodbye.\n",
+    "                If they just greet you or talk normally, respond with a friendly greeting.\n",
+    "                Given a list of connected agents with their names and description, if required return the name of the next agent you require for your assistance as well as give an instruction for it.\n",
+    "               List of agents : {Connected_agents} \"\"\"\n",
+    "        ),\n",
+    "        (\"placeholder\", \"{chat_history}\"),\n",
+    "        (\"human\", \"{input}\"),\n",
+    "        (\"placeholder\", \"{agent_scratchpad}\"),\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "\n",
+    "math_prompt=ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\n",
+    "            \"system\",\n",
+    "            \"\"\"You are a highly skilled assistant with expertise in solving math problems. Ensure accurate calculations and provide clear explanations for mathematical concepts. Use the tavily_search_results_json tool for additional information if needed.\n",
+    "                Given a list of connected agents with their names and description, if required return the name of the next agent you require for your assistance as well as give an instruction for it.\n",
+    "               List of agents : {Connected_agents} \"\"\"\n",
+    "        ),\n",
+    "        (\"placeholder\", \"{chat_history}\"),\n",
+    "        (\"human\", \"{input}\"),\n",
+    "        (\"placeholder\", \"{agent_scratchpad}\"),\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "\n",
+    "tool_prompt=ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\n",
+    "            \"system\",\n",
+    "            \"\"\"You are an AI assistant with access to powerful tools for calculations. Use these calculation tools when you need to perform precise calculations. \n",
+    "               Given a list of connected agents with their names and description, if required return the name of the next agent you require for your assistance as well as give an instruction for it.\n",
+    "               List of agents : {Connected_agents} \"\"\"\n",
+    "        ),\n",
+    "        (\"placeholder\", \"{chat_history}\"),\n",
+    "        (\"human\", \"{input}\"),\n",
+    "        (\"placeholder\", \"{agent_scratchpad}\"),\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,16 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain_community.tools.tavily_search import TavilySearchResults"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,42 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/arjiv_admin/Desktop/Reflection Implementation/env/lib/python3.12/site-packages/langchain_core/_api/beta_decorator.py:87: LangChainBetaWarning: The function `loads` is in beta. It is actively being worked on, so the API may change.\n",
-      "  warn_beta(\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[SystemMessagePromptTemplate(prompt=PromptTemplate(input_variables=[], template='You are a helpful assistant')),\n",
-       " MessagesPlaceholder(variable_name='chat_history', optional=True),\n",
-       " HumanMessagePromptTemplate(prompt=PromptTemplate(input_variables=['input'], template='{input}')),\n",
-       " MessagesPlaceholder(variable_name='agent_scratchpad')]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from langchain import hub\n",
-    "\n",
-    "# Get the prompt to use - you can modify this!\n",
-    "prompt = hub.pull(\"hwchase17/openai-functions-agent\", api_key= LANGSMITH_API_KEY)\n",
-    "prompt.messages"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,120 +188,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain.agents import create_tool_calling_agent\n",
     "\n",
-    "agent2 = create_tool_calling_agent(llm, tools, prompt)"
+    "agent2 = create_tool_calling_agent(llm, tools, search_prompt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain.agents import AgentExecutor\n",
-    "\n",
-    "agent_executor2 = AgentExecutor(agent=agent2, tools=tools, verbose=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
-      "\u001b[32;1m\u001b[1;3m\n",
-      "Invoking: `tavily_search_results_json` with `{'query': 'langchain'}`\n",
-      "\n",
-      "\n",
-      "\u001b[0m\u001b[36;1m\u001b[1;3m[{'url': 'https://js.langchain.com/v0.1/docs/get_started/introduction/', 'content': 'Langchain is a framework for developing applications powered by language models. It consists of libraries, templates, and tools for connecting, reasoning, and deploying language models.'}, {'url': 'https://python.langchain.com/v0.2/docs/introduction/', 'content': \"LangChain is a framework for developing applications powered by large language models (LLMs). Learn how to use LangChain's open-source libraries, components, and integrations to build, deploy, and evaluate LLM applications and agents.\"}, {'url': 'https://en.wikipedia.org/wiki/LangChain', 'content': 'In October 2023 LangChain introduced LangServe, a deployment tool designed to facilitate the transition from LCEL (LangChain Expression Language) prototypes to production-ready applications.[5]\\nIntegrations[edit]\\nAs of March 2023, LangChain included integrations with systems including Amazon, Google, and Microsoft Azure cloud storage; API wrappers for news, movie information, and weather; Bash for summarization, syntax and semantics checking, and execution of shell scripts; multiple web scraping subsystems and templates; few-shot learning prompt generation support; finding and summarizing \"todo\" tasks in code; Google Drive documents, spreadsheets, and presentations summarization, extraction, and creation; Google Search and Microsoft Bing web search; OpenAI, Anthropic, and Hugging Face language models; iFixit repair guides and wikis search and summarization; MapReduce for question answering, combining documents, and question generation; N-gram overlap scoring; PyPDF, pdfminer, fitz, and pymupdf for PDF file text extraction and manipulation; Python and JavaScript code generation, analysis, and debugging; Milvus vector database[6] to store and retrieve vector embeddings; Weaviate vector database[7] to cache embedding and data objects; Redis cache database storage; Python RequestsWrapper and other methods for API requests; SQL and NoSQL databases including JSON support; Streamlit, including for logging; text mapping for k-nearest neighbors search; time zone conversion and calendar operations; tracing and recording stack symbols in threaded and asynchronous subprocess runs; and the Wolfram Alpha website and SDK.[8] As a language model integration framework, LangChain\\'s use-cases largely overlap with those of language models in general, including document analysis and summarization, chatbots, and code analysis.[2]\\nHistory[edit]\\nLangChain was launched in October 2022 as an open source project by Harrison Chase, while working at machine learning startup Robust Intelligence. In April 2023, LangChain had incorporated and the new startup raised over $20 million in funding at a valuation of at least $200 million from venture firm Sequoia Capital, a week after announcing a $10 million seed investment from Benchmark.[3][4]\\n The project quickly garnered popularity, with improvements from hundreds of contributors on GitHub, trending discussions on Twitter, lively activity on the project\\'s Discord server, many YouTube tutorials, and meetups in San Francisco and London. As of April 2023, it can read from more than 50 document types and data sources.[9]\\nReferences[edit]\\nExternal links[edit]'}, {'url': 'https://python.langchain.com/v0.1/docs/get_started/quickstart/', 'content': 'Learn how to use LangChain to build a text translation application with different language models. Follow the steps to install LangChain, set up LangSmith, and chain components with LCEL.'}, {'url': 'https://www.freecodecamp.org/news/beginners-guide-to-langchain/', 'content': \"LangChain has a set_debug() method that will return more granular logs of the chain internals: Let's see it with the above example. First, we'll need to install the main langchain package for the entrypoint to import the method: %pip install langchain. Then add this code: from langchain.globals import set_debug.\"}]\u001b[0m\u001b[32;1m\u001b[1;3mLangchain is a framework for developing applications powered by language models. It consists of libraries, templates, and tools for connecting, reasoning, and deploying language models. Langchain allows developers to build applications using large language models (LLMs) and provides open-source libraries, components, and integrations for building, deploying, and evaluating LLM applications and agents.\n",
-      "\n",
-      "If you would like more detailed information or specific details about Langchain, feel free to ask!\u001b[0m\n",
-      "\n",
-      "\u001b[1m> Finished chain.\u001b[0m\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'input': 'What is langchain',\n",
-       " 'output': 'Langchain is a framework for developing applications powered by language models. It consists of libraries, templates, and tools for connecting, reasoning, and deploying language models. Langchain allows developers to build applications using large language models (LLMs) and provides open-source libraries, components, and integrations for building, deploying, and evaluating LLM applications and agents.\\n\\nIf you would like more detailed information or specific details about Langchain, feel free to ask!'}"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "agent_executor2.invoke({\"input\": \"What is langchain\"})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain.prompts import PromptTemplate\n",
-    "\n",
-    "greeting_template = \"\"\"\n",
-    "You are a friendly AI that greets people warmly when they start a conversation and says goodbye appropriately when they mention leaving. \n",
-    "\n",
-    "If someone says something about going away, respond with a proper goodbye.\n",
-    "If they just greet you or talk normally, respond with a friendly greeting.\n",
-    "\n",
-    "User: {user_input}\n",
-    "{agent_scratchpad}\n",
-    "AI: \n",
-    "\"\"\"\n",
-    "\n",
-    "# Initialize the prompt template\n",
-    "greeting_prompt = PromptTemplate(input_variables=[\"user_input\"], template=greeting_template)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "langchain_core.prompts.prompt.PromptTemplate"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# set the LANGCHAIN_API_KEY environment variable (create key in settings)\n",
-    "from langchain import hub\n",
-    "prompt_agent21 = hub.pull(\"greeter\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,44 +208,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "agent_executor21 = AgentExecutor(agent=agent21, tools = tools, verbose=True)"
+    "# Agent 1: Generally good at math questions\n",
+    "agent1 = create_tool_calling_agent(\n",
+    "    llm=llm,\n",
+    "    tools=[search],\n",
+    "    prompt=math_prompt,\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
-      "\u001b[32;1m\u001b[1;3mGoodbye! If you need anything else, feel free to reach out.\u001b[0m\n",
-      "\n",
-      "\u001b[1m> Finished chain.\u001b[0m\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'user_input': 'See ya',\n",
-       " 'output': 'Goodbye! If you need anything else, feel free to reach out.'}"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "agent_executor21.invoke({\"user_input\" : \"See ya\"})"
+    "agent11 = create_tool_calling_agent(\n",
+    "    llm=llm,\n",
+    "    tools=[search],\n",
+    "    prompt=tool_prompt,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.prompts import PromptTemplate\n",
+    "\n",
+    "choosing_template = \"\"\"\n",
+    "You are an agent with multiple other AI agents for your assistance.\n",
+    "\n",
+    "AI: \n",
+    "\"\"\"\n",
+    "\n",
+    "# Initialize the prompt template\n",
+    "choosing_prompt = PromptTemplate(input_variables=[\"Connected_agents\"], template=choosing_template)"
    ]
   }
  ],
