Formatting added to prompts

--- a/agents.ipynb
+++ b/agents.ipynb
@@ -84,6 +84,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.output_parsers import ResponseSchema, StructuredOutputParser\n",
+    "\n",
+    "response_schemas = [\n",
+    "    ResponseSchema(name=\"current_output\", description=\"Output from the current agent that will be passed to the next agent. If there is no next agent, put None\"),\n",
+    "    ResponseSchema(name=\"next_agent\", description=\"The next agent to handle the request.\"),\n",
+    "    ResponseSchema(name=\"next_task\", description=\"The task or action for the next agent.\"),\n",
+    "]\n",
+    "\n",
+    "output_parser = StructuredOutputParser.from_response_schemas(response_schemas)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "format_instructions = output_parser.get_format_instructions()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 75,
    "metadata": {},
    "outputs": [],
@@ -94,7 +120,9 @@
     "            \"system\",\n",
     "            \"\"\"You are a highly skilled assistant designed to search and answer user's general queries\n",
     "            Given a list of connected agents with their names and description, if required return the name of the next agent you require for your assistance as well as give an instruction for it.\n",
-    "               List of agents : {Connected_agents} \"\"\"\n",
+    "               List of agents : {Connected_agents}\\n\n",
+    "               Format Instructions : {format_instructions}\"\"\"\n",
+    "\n",
     "        ),\n",
     "        (\"placeholder\", \"{chat_history}\"),\n",
     "        (\"human\", \"{input}\"),\n",
@@ -110,7 +138,8 @@
     "                If someone says something about going away, respond with a proper goodbye.\n",
     "                If they just greet you or talk normally, respond with a friendly greeting.\n",
     "                Given a list of connected agents with their names and description, if required return the name of the next agent you require for your assistance as well as give an instruction for it.\n",
-    "               List of agents : {Connected_agents} \"\"\"\n",
+    "               List of agents : {Connected_agents} \\n\n",
+    "               Format Instructions : {format_instructions}\"\"\"\n",
     "        ),\n",
     "        (\"placeholder\", \"{chat_history}\"),\n",
     "        (\"human\", \"{input}\"),\n",
@@ -125,7 +154,8 @@
     "            \"system\",\n",
     "            \"\"\"You are a highly skilled assistant with expertise in solving math problems. Ensure accurate calculations and provide clear explanations for mathematical concepts. Use the tavily_search_results_json tool for additional information if needed.\n",
     "                Given a list of connected agents with their names and description, if required return the name of the next agent you require for your assistance as well as give an instruction for it.\n",
-    "               List of agents : {Connected_agents} \"\"\"\n",
+    "               List of agents : {Connected_agents} \\n\n",
+    "               Format Instructions : {format_instructions}\"\"\"\n",
     "        ),\n",
     "        (\"placeholder\", \"{chat_history}\"),\n",
     "        (\"human\", \"{input}\"),\n",
@@ -140,7 +170,23 @@
     "            \"system\",\n",
     "            \"\"\"You are an AI assistant with access to powerful tools for calculations. Use these calculation tools when you need to perform precise calculations. \n",
     "               Given a list of connected agents with their names and description, if required return the name of the next agent you require for your assistance as well as give an instruction for it.\n",
-    "               List of agents : {Connected_agents} \"\"\"\n",
+    "               List of agents : {Connected_agents} \\n\n",
+    "               Format Instructions : {format_instructions}\"\"\"\n",
+    "        ),\n",
+    "        (\"placeholder\", \"{chat_history}\"),\n",
+    "        (\"human\", \"{input}\"),\n",
+    "        (\"placeholder\", \"{agent_scratchpad}\"),\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "supervisor_prompt=ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\n",
+    "            \"system\",\n",
+    "            \"\"\"You are an AI assistant who is the first agent tasked to find the appropriate next agent given the task. \n",
+    "               Given a list of connected agents with their names and description, if required return the name of the next agent you require for your assistance as well as give an instruction for it.\n",
+    "               List of agents : {Connected_agents} \\n\n",
+    "               Format Instructions : {format_instructions}\"\"\"\n",
     "        ),\n",
     "        (\"placeholder\", \"{chat_history}\"),\n",
     "        (\"human\", \"{input}\"),\n",
@@ -255,7 +301,7 @@
     "\"\"\"\n",
     "\n",
     "# Initialize the prompt template\n",
-    "choosing_prompt = PromptTemplate(input_variables=[\"Connected_agents\"], template=choosing_template)"
+    "choosing_prompt = PromptTemplate(input_variables=[\"Connected_agents\"], template=choosing_template, partial_variables={\"format_instructions\": format_instructions})"
    ]
   }
  ],
