--- a/output_parser.ipynb
+++ b/output_parser.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "\n",
     "response_schemas = [\n",
-    "    ResponseSchema(name=\"current_output\", description=\"Output from the current agent that will be passed to the next agent.\"),\n",
+    "    ResponseSchema(name=\"current_output\", description=\"Output from the current agent that will be passed to the next agent. If there is no next agent, put None\"),\n",
     "    ResponseSchema(name=\"next_agent\", description=\"The next agent to handle the request.\"),\n",
     "    ResponseSchema(name=\"next_task\", description=\"The task or action for the next agent.\"),\n",
     "]\n",
@@ -51,25 +51,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'current_output': '2', 'next_agent': '', 'next_task': ''}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
    "source": [
     "model = ChatOpenAI(temperature=0)\n",
     "chain = prompt | model | output_parser\n",
     "\n",
-    "chain.invoke({\"question\": \"What is 1+1?\"})"
+    "response = chain.invoke({\"question\": \"What is 1+1?\"})\n",
+    "print(response[\"next_agent\"])"
    ]
   }
  ],
