supervisor agent made

--- a/agents.ipynb
+++ b/agents.ipynb
@@ -245,6 +245,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "supervisor = create_tool_calling_agent(llm, tools, supervisor_prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 67,
    "metadata": {},
    "outputs": [],
