prev context added

--- a/agents.ipynb
+++ b/agents.ipynb
@@ -121,7 +121,8 @@
     "            \"\"\"You are a highly skilled assistant designed to search and answer user's general queries\n",
     "            Given a list of connected agents with their names and description, if required return the name of the next agent you require for your assistance as well as give an instruction for it.\n",
     "               List of agents : {Connected_agents}\\n\n",
-    "               Format Instructions : {format_instructions}\"\"\"\n",
+    "               Format Instructions : {format_instructions}\\n\n",
+    "               Previous Context : {current_output}\"\"\"\n",
     "\n",
     "        ),\n",
     "        (\"placeholder\", \"{chat_history}\"),\n",
@@ -139,7 +140,8 @@
     "                If they just greet you or talk normally, respond with a friendly greeting.\n",
     "                Given a list of connected agents with their names and description, if required return the name of the next agent you require for your assistance as well as give an instruction for it.\n",
     "               List of agents : {Connected_agents} \\n\n",
-    "               Format Instructions : {format_instructions}\"\"\"\n",
+    "               Format Instructions : {format_instructions}\\n\n",
+    "               Previous Context : {current_output}\"\"\"\n",
     "        ),\n",
     "        (\"placeholder\", \"{chat_history}\"),\n",
     "        (\"human\", \"{input}\"),\n",
@@ -155,7 +157,8 @@
     "            \"\"\"You are a highly skilled assistant with expertise in solving math problems. Ensure accurate calculations and provide clear explanations for mathematical concepts. Use the tavily_search_results_json tool for additional information if needed.\n",
     "                Given a list of connected agents with their names and description, if required return the name of the next agent you require for your assistance as well as give an instruction for it.\n",
     "               List of agents : {Connected_agents} \\n\n",
-    "               Format Instructions : {format_instructions}\"\"\"\n",
+    "               Format Instructions : {format_instructions}\\n\n",
+    "               Previous Context : {current_output}\"\"\"\n",
     "        ),\n",
     "        (\"placeholder\", \"{chat_history}\"),\n",
     "        (\"human\", \"{input}\"),\n",
@@ -171,7 +174,8 @@
     "            \"\"\"You are an AI assistant with access to powerful tools for calculations. Use these calculation tools when you need to perform precise calculations. \n",
     "               Given a list of connected agents with their names and description, if required return the name of the next agent you require for your assistance as well as give an instruction for it.\n",
     "               List of agents : {Connected_agents} \\n\n",
-    "               Format Instructions : {format_instructions}\"\"\"\n",
+    "               Format Instructions : {format_instructions}\\n\n",
+    "               Previous Context : {current_output}\"\"\"\n",
     "        ),\n",
     "        (\"placeholder\", \"{chat_history}\"),\n",
     "        (\"human\", \"{input}\"),\n",
